--- a/src/main/resources/templates/clientes.html
+++ b/src/main/resources/templates/clientes.html
@@ -38,34 +38,59 @@
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3" action="#" th:action="@{/addClient}" th:object="${clientRegister}"
-                                    method="POST">
+                                <form class="p-3 needs-validation" th:action="@{/addClient}"
+                                    th:object="${clientRegister}" method="POST" novalidate>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="form-outline mb-4">
-                                                <input type="number" class="form-control" id="client_cedula"
-                                                    name="client_cedula">
-                                                <label class="form-label" for="client_cedula">Cédula</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="number" class="form-control" id="client_cedula"
+                                                        name="client_cedula">
+                                                    <label class="form-label" for="client_cedula">Cédula</label>
+                                                    <div class="invalid-feedback">La cédula que ingreso es inválida o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="client_name"
-                                                    name="client_name">
-                                                <label class="form-label" for="client_name">Nombre Completo</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" class="form-control" id="client_name"
+                                                        name="client_name">
+                                                    <label class="form-label" for="client_name">Nombre Completo</label>
+                                                    <div class="invalid-feedback">El nombre que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="client_address"
-                                                    name="client_address">
-                                                <label class="form-label" for="client_address">Dirección</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" class="form-control" id="client_address"
+                                                        name="client_address">
+                                                    <label class="form-label" for="client_address">Dirección</label>
+                                                    <div class="invalid-feedback">La dirección que ingreso es inválida o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline col-12 mb-4">
-                                                <input type="text" class="form-control" id="client_tel"
-                                                    name="client_tel">
-                                                <label class="form-label" for="client_tel">Teléfono</label>
+                                            <div class="col-12">
+                                                <div class="form-outline col-12 mb-4">
+                                                    <input type="text" class="form-control" id="client_tel"
+                                                        name="client_tel">
+                                                    <label class="form-label" for="client_tel">Teléfono</label>
+                                                    <div class="invalid-feedback">El teléfono que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline col-12">
-                                                <input type="email" class="form-control" id="client_email"
-                                                    name="client_email">
-                                                <label class="form-label" for="client_email">Email</label>
+                                            <div class="col-12">
+                                                <div class="form-outline col-12">
+                                                    <input type="email" class="form-control" id="client_email"
+                                                        name="client_email">
+                                                    <label class="form-label" for="client_email">Email</label>
+                                                    <div class="invalid-feedback">El email que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -89,13 +114,13 @@
                 </div>
                 <!-- Status Alert-->
                 <div class="row">
-                    <div th:if="${session.message}" th:classappends="${session.message}" class="alert alert-success text-center"
-                        role="alert" data-mbd-color="success">
+                    <div th:if="${session.message}" th:classappends="${session.message}"
+                        class="alert alert-success text-center" role="alert" data-mbd-color="success">
                         <p th:text="${session.message}"></p>
                         <th:block th:text="${#session.removeAttribute('message')}"></th:block>
                     </div>
-                    <div th:if="${session.alert}" th:classappends="${session.alert}" class="alert alert-danger text-center"
-                        role="alert" data-mbd-color="danger">
+                    <div th:if="${session.alert}" th:classappends="${session.alert}"
+                        class="alert alert-danger text-center" role="alert" data-mbd-color="danger">
                         <p th:text="${session.alert}"></p>
                         <th:block th:text="${#session.removeAttribute('alert')}"></th:block>
                     </div>
@@ -123,8 +148,8 @@
                                 <td th:text="${clientes.client_address}"></td>
                                 <td>
                                     <div class="btn-group" role="group" aria-label="crud">
-                                        <a type="button" class="btn btn-warning btn-sm dataClient" data-mdb-toggle="modal"
-                                            data-mdb-target="#editarModal">
+                                        <a type="button" class="btn btn-warning btn-sm dataClient"
+                                            data-mdb-toggle="modal" data-mdb-target="#editarModal">
                                             Editar
                                         </a>
                                         <a type="button" class="btn btn-danger btn-sm"
@@ -148,32 +173,59 @@
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cencelar">
                                 </button>
                             </div>
-                            <form class="p-3" action="#" th:action="@{/updateClient}" th:object="${updateClient}"
-                                method="POST">
+                            <form class="p-3 needs-validation" th:action="@{/updateClient}" th:object="${updateClient}"
+                                method="POST" novalidate>
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="form-outline mb-4">
-                                            <input type="number" class="form-control" id="client_cedula_update"
-                                                name="client_cedula">
-                                            <label class="form-label" for="client_cedula">Cédula</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="number" class="form-control" id="client_cedula_update"
+                                                    name="client_cedula">
+                                                <label class="form-label" for="client_cedula">Cédula</label>
+                                                <div class="invalid-feedback">La cédula que ingreso es inválida o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" id="client_name_update" name="client_name">
-                                            <label class="form-label" for="client_name">Nombre Completo</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="client_name_update"
+                                                    name="client_name">
+                                                <label class="form-label" for="client_name">Nombre Completo</label>
+                                                <div class="invalid-feedback">El nombre que ingreso es inválido o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" id="client_address_update"
-                                                name="client_address">
-                                            <label class="form-label" for="client_address">Dirección</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="client_address_update"
+                                                    name="client_address">
+                                                <label class="form-label" for="client_address">Dirección</label>
+                                                <div class="invalid-feedback">La dirección que ingreso es inválida o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline col-12 mb-4">
-                                            <input type="text" class="form-control" id="client_tel_update" name="client_tel">
-                                            <label class="form-label" for="client_tel">Teléfono</label>
+                                        <div class="col-12">
+                                            <div class="form-outline col-12 mb-4">
+                                                <input type="text" class="form-control" id="client_tel_update"
+                                                    name="client_tel">
+                                                <label class="form-label" for="client_tel">Teléfono</label>
+                                                <div class="invalid-feedback">El teléfono que ingreso es inválido o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline col-12">
-                                            <input type="email" class="form-control" id="client_email_update"
-                                                name="client_email">
-                                            <label class="form-label" for="client_email">Email</label>
+                                        <div class="col-12">
+                                            <div class="form-outline col-12">
+                                                <input type="email" class="form-control" id="client_email_update"
+                                                    name="client_email">
+                                                <label class="form-label" for="client_email">Email</label>
+                                                <div class="invalid-feedback">El email que ingreso es inválido o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -198,4 +250,5 @@
         <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+
 </html>
