--- a/src/main/resources/templates/proveedores.html
+++ b/src/main/resources/templates/proveedores.html
@@ -38,34 +38,59 @@
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3" action="#" th:action="@{/addSupplier}" th:object="${supplier}"
-                                    method="POST">
+                                <form class="p-3 needs-validation" action="#" th:action="@{/addSupplier}"
+                                    th:object="${supplier}" method="POST" novalidate>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="form-outline mb-4">
-                                                <input type="number" class="form-control" id="supplier_nit"
-                                                    name="supplier_nit">
-                                                <label class="form-label" for="supplier_nit">NIT</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="number" class="form-control" id="supplier_nit"
+                                                        name="supplier_nit">
+                                                    <label class="form-label" for="supplier_nit">NIT</label>
+                                                    <div class="invalid-feedback">El NIT que ingreso es inválido o esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="supplier_name"
-                                                    name="supplier_name">
-                                                <label class="form-label" for="supplier_name">Nombre Completo</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" class="form-control" id="supplier_name"
+                                                        name="supplier_name">
+                                                    <label class="form-label" for="supplier_name">Nombre
+                                                        Completo</label>
+                                                    <div class="invalid-feedback">El nombre que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="supplier_address"
-                                                    name="supplier_address">
-                                                <label class="form-label" for="supplier_address">Dirección</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" class="form-control" id="supplier_address"
+                                                        name="supplier_address">
+                                                    <label class="form-label" for="supplier_address">Dirección</label>
+                                                    <div class="invalid-feedback">La dirección que ingreso es inválida o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline col-12 mb-4">
-                                                <input type="text" class="form-control" id="supplier_tel"
-                                                    name="supplier_tel">
-                                                <label class="form-label" for="supplier_tel">Teléfono</label>
+                                            <div class="col-12">
+                                                <div class="form-outline col-12 mb-4">
+                                                    <input type="text" class="form-control" id="supplier_tel"
+                                                        name="supplier_tel">
+                                                    <label class="form-label" for="supplier_tel">Teléfono</label>
+                                                    <div class="invalid-feedback">El teléfono que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline col-12">
-                                                <input type="text" class="form-control" id="supplier_city"
-                                                    name="supplier_city">
-                                                <label class="form-label" for="supplier_city">Ciudad</label>
+                                            <div class="col-12">
+                                                <div class="form-outline col-12">
+                                                    <input type="text" class="form-control" id="supplier_city"
+                                                        name="supplier_city">
+                                                    <label class="form-label" for="supplier_city">Ciudad</label>
+                                                    <div class="invalid-feedback">La ciudad que ingreso es inválida o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -89,13 +114,13 @@
                 </div>
                 <!-- Status Alert-->
                 <div class="row">
-                    <div th:if="${session.message}" th:classappends="${session.message}" class="alert alert-success text-center"
-                        role="alert" data-mbd-color="success">
+                    <div th:if="${session.message}" th:classappends="${session.message}"
+                        class="alert alert-success text-center" role="alert" data-mbd-color="success">
                         <p th:text="${session.message}"></p>
                         <th:block th:text="${#session.removeAttribute('message')}"></th:block>
                     </div>
-                    <div th:if="${session.alert}" th:classappends="${session.alert}" class="alert alert-danger text-center"
-                        role="alert" data-mbd-color="danger">
+                    <div th:if="${session.alert}" th:classappends="${session.alert}"
+                        class="alert alert-danger text-center" role="alert" data-mbd-color="danger">
                         <p th:text="${session.alert}"></p>
                         <th:block th:text="${#session.removeAttribute('alert')}"></th:block>
                     </div>
@@ -123,8 +148,8 @@
                                 <td th:text="${proveedores.supplier_city}"></td>
                                 <td>
                                     <div class="btn-group" role="group" aria-label="crud">
-                                        <a type="button" class="btn btn-warning btn-sm dataSupplier" data-mdb-toggle="modal"
-                                            data-mdb-target="#editarModal">
+                                        <a type="button" class="btn btn-warning btn-sm dataSupplier"
+                                            data-mdb-toggle="modal" data-mdb-target="#editarModal">
                                             Editar
                                         </a>
                                         <a type="button" class="btn btn-danger btn-sm"
@@ -148,34 +173,55 @@
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cancelar">
                                 </button>
                             </div>
-                            <form class="p-3" action="#" th:action="@{/updateSupplier}" th:object="${supplier}"
-                                method="POST">
+                            <form class="p-3 needs-validation" th:action="@{/updateSupplier}" th:object="${supplier}"
+                                method="POST" novalidate>
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="form-outline mb-4">
-                                            <input type="number" class="form-control" id="supplier_nit_update"
-                                                name="supplier_nit">
-                                            <label class="form-label" for="supplier_nit">NIT</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="number" class="form-control" id="supplier_nit_update"
+                                                    name="supplier_nit">
+                                                <label class="form-label" for="supplier_nit">NIT</label>
+                                                <div class="invalid-feedback">El NIT que ingreso es inválido o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" id="supplier_name_update"
-                                                name="supplier_name">
-                                            <label class="form-label" for="supplier_name">Nombre Completo</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="supplier_name_update"
+                                                    name="supplier_name">
+                                                <label class="form-label" for="supplier_name">Nombre Completo</label>
+                                                <div class="invalid-feedback">El nombre que ingreso es inválido o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" id="supplier_address_update"
-                                                name="supplier_address">
-                                            <label class="form-label" for="supplier_address">Dirección</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="supplier_address_update"
+                                                    name="supplier_address">
+                                                <label class="form-label" for="supplier_address">Dirección</label>
+                                                <div class="invalid-feedback">La dirección que ingreso es inválida o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline col-12 mb-4">
-                                            <input type="text" class="form-control" id="supplier_tel_update"
-                                                name="supplier_tel">
-                                            <label class="form-label" for="supplier_tel">Teléfono</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="supplier_tel_update"
+                                                    name="supplier_tel">
+                                                <label class="form-label" for="supplier_tel">Teléfono</label>
+                                                <div class="invalid-feedback">El teléfono que ingreso es inválido o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline col-12">
-                                            <input type="text" class="form-control" id="supplier_city_update"
-                                                name="supplier_city">
-                                            <label class="form-label" for="supplier_city">Ciudad</label>
+                                        <div class="col-12">
+                                            <div class="form-outline">
+                                                <input type="text" class="form-control" id="supplier_city_update"
+                                                    name="supplier_city">
+                                                <label class="form-label" for="supplier_city">Ciudad</label>
+                                                <div class="invalid-feedback">La ciudad que ingreso es inválida o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -191,13 +237,14 @@
                 </div>
             </div>
         </div>
-    <!-- MDB Script -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
-    <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <!-- MDB Script -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+        <script type="text/javascript" th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
