--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -39,31 +39,52 @@
                                     <button type="button" class="btn-close" data-mdb-dismiss="modal"
                                         aria-label="Cerrar"></button>
                                 </div>
-                                <form class="p-3" action="#" th:action="@{/addUser}" th:object="${userRegister}"
-                                    method="POST">
+                                <form class="p-3 needs-validation" th:action="@{/addUser}" th:object="${userRegister}"
+                                    method="POST" novalidate>
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="form-outline mb-4">
-                                                <input type="number" class="form-control" id="user_cedula"
-                                                    name="user_cedula">
-                                                <label class="form-label" for="user_cedula">Cédula</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="number" class="form-control" id="user_cedula"
+                                                        name="user_cedula" required>
+                                                    <label class="form-label" for="user_cedula">Cédula</label>
+                                                    <div class="invalid-feedback">La cédula que ingreso es inválida o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="text" class="form-control" id="user_name" name="user_name">
-                                                <label class="form-label" for="user_name">Nombre Completo</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" class="form-control" id="user_name"
+                                                        name="user_name" required>
+                                                    <label class="form-label" for="user_name">Nombre Completo</label>
+                                                    <div class="invalid-feedback">El nombre que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
-                                            <div class="form-outline mb-4">
-                                                <input type="email" class="form-control" id="user_email"
-                                                    name="user_email">
-                                                <label class="form-label" for="user_email">Email</label>
+                                            <div class="col-12">
+                                                <div class="form-outline mb-4">
+                                                    <input type="email" class="form-control" id="user_email"
+                                                        name="user_email" required>
+                                                    <label class="form-label" for="user_email">Email</label>
+                                                    <div class="invalid-feedback">El email que ingreso es inválido o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="row mb-0 mb-md-4">
-                                            <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                                <input type="text" class="form-control" id="username" name="username">
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="username" name="username"
+                                                    required>
                                                 <label class="form-label" for="username">Usuario</label>
+                                                <div class="invalid-feedback">El usuario que ingreso es inválido o esta
+                                                    vacio.</div>
                                             </div>
-                                            <div class=" col-12 mb-4 mb-md-0 col-md-3">
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="mb-4">
                                                 <select class="form-select" aria-label="Select roles" name="roles">
                                                     <option value="ADMIN">Admin</option>
                                                     <option value="USER">Usuario</option>
@@ -71,10 +92,16 @@
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="form-outline col-12">
-                                                <input type="password" class="form-control" id="password"
-                                                    name="password">
-                                                <label class="form-label" for="password">Contraseña</label>
+                                            <div class="col-12">
+                                                <div class="form-outline">
+                                                    <input type="password" class="form-control" id="password"
+                                                        name="password" required>
+                                                    <label class="form-label" for="password">Contraseña</label>
+                                                    <div class="invalid-feedback">La contraseña que ingreso es inválida
+                                                        o
+                                                        esta
+                                                        vacio.</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -97,13 +124,13 @@
                 <!--End Search-->
                 <!-- Status Alert-->
                 <div class="row">
-                    <div th:if="${session.message}" th:classappends="${session.message}" class="alert alert-success text-center"
-                        role="alert" data-mbd-color="success">
+                    <div th:if="${session.message}" th:classappends="${session.message}"
+                        class="alert alert-success text-center" role="alert" data-mbd-color="success">
                         <p th:text="${session.message}"></p>
                         <th:block th:text="${#session.removeAttribute('message')}"></th:block>
                     </div>
-                    <div th:if="${session.alert}" th:classappends="${session.alert}" class="alert alert-danger text-center"
-                        role="alert" data-mbd-color="danger">
+                    <div th:if="${session.alert}" th:classappends="${session.alert}"
+                        class="alert alert-danger text-center" role="alert" data-mbd-color="danger">
                         <p th:text="${session.alert}"></p>
                         <th:block th:text="${#session.removeAttribute('alert')}"></th:block>
                     </div>
@@ -131,14 +158,12 @@
                                 <td th:text="${usuarios.user_email}"></td>
                                 <td>
                                     <div class="btn-group" role="group" aria-label="crud">
-                                        <a type="button" class="btn btn-warning btn-sm dataUser"
-                                            data-mdb-toggle="modal"
+                                        <a type="button" class="btn btn-warning btn-sm dataUser" data-mdb-toggle="modal"
                                             data-mdb-target="#editarModal">
                                             Editar
                                         </a>
                                         <a type="button" class="btn btn-danger btn-sm"
-                                                th:onclick="deleteUser([[${usuarios.user_cedula}]])"
-                                        >
+                                            th:onclick="deleteUser([[${usuarios.user_cedula}]])">
                                             Eliminar
                                         </a>
                                     </div>
@@ -158,38 +183,65 @@
                                 <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Cancelar">
                                 </button>
                             </div>
-                            <form class="p-3" th:action="@{/updateUser}" th:object = "${user}" method = "POST">
+                            <form class="p-3 needs-validation" th:action="@{/updateUser}" th:object="${user}"
+                                method="POST" novalidate>
                                 <div class="modal-body">
                                     <div class="row">
-                                        <div class="form-outline mb-4">
-                                            <input type="number" class="form-control" name = "user_cedula" id = "user_cedula_update">
-                                            <label class="form-label" for="user_cedula">Cédula</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="number" class="form-control" id="user_cedula_update"
+                                                    name="user_cedula" required>
+                                                <label class="form-label" for="user_cedula_update">Cédula</label>
+                                                <div class="invalid-feedback">La cédula que ingreso es inválida o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="text" class="form-control" name = "user_name" id = "user_name_update">
-                                            <label class="form-label" for="user_name">Nombre Completo</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="text" class="form-control" id="user_name_update" name="user_name"
+                                                    required>
+                                                <label class="form-label" for="user_name_update">Nombre Completo</label>
+                                                <div class="invalid-feedback">El nombre que ingreso es inválido o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="email" class="form-control" name = "user_email" id = "user_email_update">
-                                            <label class="form-label" for="user_email">Email</label>
+                                        <div class="col-12">
+                                            <div class="form-outline mb-4">
+                                                <input type="email" class="form-control" id="user_email_update"
+                                                    name="user_email" required>
+                                                <label class="form-label" for="user_email_update">Email</label>
+                                                <div class="invalid-feedback">El email que ingreso es inválido o esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="row mb-0 mb-md-4">
-                                        <div class="form-outline col-12 mb-4 mb-md-0 col-md">
-                                            <input type="text" class="form-control" name = "username" id = "username_update">
-                                            <label class="form-label" for="username">Usuario</label>
+                                    <div class="col-12">
+                                        <div class="form-outline mb-4">
+                                            <input type="text" class="form-control" id="username_update" name="username"
+                                                required>
+                                            <label class="form-label" for="username_update">Usuario</label>
+                                            <div class="invalid-feedback">El usuario que ingreso es inválido o esta
+                                                vacio.</div>
                                         </div>
-                                        <div class=" col-12 mb-4 mb-md-0 col-md-3">
-                                            <select class="form-select" aria-label="Select roles" name = "roles" id = "roles_update">
-                                                <option th:value="ADMIN" th:text = "Admin"></option>
-                                                <option th:value="USER" th:text = "Usuario"></option>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="mb-4">
+                                            <select class="form-select" aria-label="Select roles" name="roles">
+                                                <option value="ADMIN">Admin</option>
+                                                <option value="USER">Usuario</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="form-outline col-12">
-                                            <input type="password" class="form-control" name = "password">
-                                            <label class="form-label" for="password">Contraseña</label>
+                                        <div class="col-12">
+                                            <div class="form-outline">
+                                                <input type="password" class="form-control" id="password_update"
+                                                    name="password" required>
+                                                <label class="form-label" for="password_update">Contraseña</label>
+                                                <div class="invalid-feedback">La contraseña que ingreso es inválida o
+                                                    esta
+                                                    vacio.</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
